# autoguess

./: .gitattributes  .gitignore  LICENSE.txt  PACKAGING_GUIDE.md  Prerequisites.txt  README.md  autoguess.py  config.py  installer.sh  installer_macos.sh  pyproject.toml  requirements.txt
ciphers/AES/: aes1kp-v0.py  aes1kp-v1.py  aes1kp-v2.py  output1r.txt  output2r.txt  output3r.txt  relationfile_aes1kp_1r_mg6_ms14.txt  relationfile_aes1kp_2r_mg10_ms20.txt  relationfile_aes1kp_3r_mg15_ms22.txt
ciphers/BelT/: belt-128.py  belt-192.py  belt-256.py  relationfile_belt-256_3r_mg10_ms10.txt  relationfile_belt-256_4r_mg10_ms10.txt  relationfile_belt-256_5r_mg10_ms10.txt
ciphers/CRAFT/: craft.py  relationfile_craft_10r_mg28_ms50.txt  relationfile_craft_11r_mg28_ms52.txt  relationfile_craft_12r_mg29_ms55.txt  relationfile_craft_13r_mg30_ms60.txt  relationfile_craft_14r_mg32_ms70.txt  relationfile_craft_1r_mg0_ms3.txt  relationfile_craft_2r_mg16_ms4.txt  relationfile_craft_3r_mg16_ms10.txt  relationfile_craft_4r_mg20_ms16.txt  relationfile_craft_5r_mg20_ms16.txt  relationfile_craft_6r_mg23_ms35.txt  relationfile_craft_7r_mg23_ms35.txt  relationfile_craft_8r_mg26_ms40.txt  relationfile_craft_9r_mg26_ms50.txt
ciphers/ChaCha/: chacha.py  chacha5R.txt  chacha6R.txt  relationfile_chacha_2clk_mg4_ms10.txt  relationfile_chacha_3clk_mg8_ms15.txt  relationfile_chacha_4clk_mg6_ms25.txt  relationfile_chacha_5clk_mg8_ms25.txt
ciphers/Enocoro128v2/: enocoro-v0.py  enocoro-v1.py  output.txt  relationfile_enocoro_16clk_mg18_ms22.txt  test.txt
ciphers/Example0/: example1.py  relationfile_example1.txt
ciphers/Example1/: relationfile.txt
ciphers/Example2/: example2.txt
ciphers/Example3/: relationfile.txt
ciphers/Example4/: algebraic_relations.txt
ciphers/Example5/: example5.txt
ciphers/Example6/: example2.py  relationfile_rabit_9clk_mg6_ms22.txt
ciphers/KCipher2/: kcipher2-v0.py  kcipher2-v1.py  kcipher2-v3.py  relationfile_kcipher2_8clk_mg10_ms19.txt
ciphers/Khudra/: khudar-v0.py  khudar-v1.py  relationfile_khudra_alternative_10r_mg4_ms10.txt  relationfile_khudra_alternative_11r_mg4_ms11.txt  relationfile_khudra_alternative_12r_mg4_ms12.txt  relationfile_khudra_alternative_13r_mg4_ms15.txt  relationfile_khudra_alternative_14r_mg4_ms16.txt  relationfile_khudra_alternative_1r_mg0_ms5.txt  relationfile_khudra_alternative_2r_mg1_ms5.txt  (+7 more)
ciphers/LEA-128/: lea128.py  (+4 more)
configfiles/: ortools.msc
core/: gdcp.py  gdelim.py  gdgroebner.py  gdmark.py  gdmilp.py  gdsat.py  gdsmt.py  gdz3smt.py  graphdrawer.py  inputparser.py  macaulay.py  minizinc_installer.py  parsesolution.py  propagate.py  search.py
docker/: Dockerfile  DockerfileArch  DockerfileDebian
miscellaneous/: logo.svg'
sagescripts/: DetFlowToDiGraph.sage  DetFlowToDiGraph.sage.py  FlowGraph.ipynb
(+149 files in other folders)
